force-app/main/default/objects/BANK__c/BANK__c.object-meta.xml
<CustomObject>
    <label>BANK</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BANKS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>