force-app/main/default/objects/BANK__c/fields/Total_Branches_in_bank__c.field-meta.xml
<CustomField>
    <fullName>Total_Branches_in_bank__c</fullName>
    <label>Total Branches in bank</label>
    <summaryForeignKey>BRANCH__c.Bank_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>