force-app/main/default/objects/BANK__c/fields/Type_Of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Bank__c</fullName>
    <label>Type Of Bank</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Regional Rural</fullName>
            </value>
            <value>
                <fullName>State Co-Operative</fullName>
            </value>
            <value>
                <fullName>Urban Co-Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>