force-app/main/default/objects/BANK__c/listViews/All_Banks_List.listView-meta.xml
<ListView>
    <fullName>All_Banks_List</fullName>
    <columns>NAME</columns>
    <columns>Type_Of_Bank__c</columns>
    <columns>Total_Branches_in_bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Banks List</label>
</ListView>